# rust-exchange

./: .gitignore  Cargo.toml  README.md  architecture.excalidraw  build.rs
.github/workflows/: rust.yml
data/offline/: SUIUSD_order_book.csv  XETHZUSD_order_book.csv  XXBTZUSD_order_book.csv
proto/: orderbook.proto
src/: client.rs  server copy.rs  server.rs
src/models/: model.rs
src/tests/: integration_tests.rs
src/utils/: config.rs
