[package]
name = "exchange-template"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tonic = "0.11.0"
prost = "0.12.6"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
futures = "0.3.30"
csv = "1.3.0"
chrono = "0.4"
ordered-float = "4.2.0"
structopt = "0.3.26"
colored = "2.1.0"
uuid = { version = "1.8.0", features = ["v4"] }

mockito = "1.4.0"

log = "0.4.21"
env_logger = "0.11.3"

[dev-dependencies]
serial_test = "3.1.1"

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[profile.test]
test-threads = 2