[package]
name = "rust-exchange"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
tonic = "0.12.3"
prost = "0.13.3"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
futures = "0.3.31"
csv = "1.3.0"
chrono = "0.4"
ordered-float = "4.4.0"
structopt = "0.3.26"
colored = "2.1.0"
uuid = { version = "1.11.0", features = ["v4"] }
serde_yaml = "0.9"

mockito = "1.5.0"

log = "0.4.22"
env_logger = "0.11.5"
openssl-sys = "0.9.104"

[dev-dependencies]
serial_test = "3.1.1"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"